fixed link routing to go to danielmarkjones.com

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <h1 class="col-sm-5 text-center" id="title">daniel mark jones</h1>
             <div class="col-sm-2"></div>
             <nav class="col-sm-5 text-center">
-                <a class="navlink" class="align-middle" href="http://www.cs.utexas.edu/~djones23/">home</a>
+                <a class="navlink" class="align-middle" href="http://danielmarkjones.com">home</a>
                 <a class="navlink" target="_blank" class="align-middle" href="https://michaeldonovanx.itch.io/doggone">featured</a>
-                <a class="navlink" class="align-middle" href="http://cs.utexas.edu/~djones23/photos">photos</a>
+                <a class="navlink" class="align-middle" href="danielmarkjones.com/photos">photos</a>
                 <a class="navlink" class="align-middle" href="https://www.twitch.tv/mcboxman">litness</a>
             </nav>
         </div>
