--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav class="col-sm-5 text-center">
                 <a class="navlink" class="align-middle" href="http://danielmarkjones.com">home</a>
                 <a class="navlink" target="_blank" class="align-middle" href="https://michaeldonovanx.itch.io/doggone">featured</a>
-                <a class="navlink" class="align-middle" href="danielmarkjones.com/photos">photos</a>
+                <a class="navlink" class="align-middle" href="http://danielmarkjones.com/photos">photos</a>
                 <a class="navlink" class="align-middle" href="https://www.twitch.tv/mcboxman">litness</a>
             </nav>
         </div>
