test random number server request

--- a/cardshark/index.html
+++ b/cardshark/index.html
@@ -25,7 +25,25 @@
 
     <script>
         function draw_card() {
-          alert('Button clicked!'); // Replace this with your JavaScript code
+          // Make a simple GET request
+            fetch('http://danielmarkjones.com/cardshark_server')
+            .then(response => {
+                // Check if the request was successful (status code 200-299)
+                if (!response.ok) {
+                throw new Error(`HTTP error! Status: ${response.status}`);
+                }
+                // Parse the response body as JSON
+                return response.json();
+            })
+            .then(data => {
+                // Handle the JSON data
+                document.getElementById('result').textContent = data["value"]
+            })
+            .catch(error => {
+                // Handle errors
+                console.error('Fetch error:', error);
+            });
+
         }
       </script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
