--- a/cardshark/index.html
+++ b/cardshark/index.html
@@ -59,7 +59,7 @@
                   throw new Error(`HTTP error! Status: ${response.status}`);
                   }
                   // Parse the response body as JSON
-                  return response;
+                  return response.json();
               })
               .then(data => {
                   // Handle the JSON data
