--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <div class="col-sm-2"></div>
             <nav class="col-sm-5 text-center">
                 <a class="navlink" class="align-middle" href="http://danielmarkjones.com">home</a>
-                
                 <a class="navlink" class="align-middle" href="http://danielmarkjones.com/photos">photos</a>
-                
+                <a class="navlink" class="align-middle" href="http://danielmarkjones.com/cardshark">cardshark</a>
+                <a class="navlink" class="align-middle" href="http://danielmarkjones.com/webgpu/tutorial.html">webgpu</a>
             </nav>
         </div>
     </header>
