--- a/photos/index.html
+++ b/photos/index.html
@@ -14,11 +14,11 @@
         <div class="row align-items-center" id="">
             <h1 class="col-sm-5 text-center" id="title">daniel mark jones</h1>
             <div class="col-sm-2"></div>
-            <nav class="col-sm-5 text-centered">
-                <a class="navlink" class="align-middle" href="http://danielmarkjones.com/">home</a>
-                <a class="navlink" target="_blank" class="align-middle" href="https://www.twitch.tv/mcboxman">featured</a>
+            <nav class="col-sm-5 text-center">
+                <a class="navlink" class="align-middle" href="http://danielmarkjones.com">home</a>
                 <a class="navlink" class="align-middle" href="http://danielmarkjones.com/photos">photos</a>
-                <a class="navlink" class="align-middle" href="https://www.twitch.tv/mcboxman">litness</a>
+                <a class="navlink" class="align-middle" href="http://danielmarkjones.com/cardshark">cardshark</a>
+                <a class="navlink" class="align-middle" href="http://danielmarkjones.com/webgpu/tutorial.html">webgpu</a>
             </nav>
         </div>
     </header>
