--- a/webgpu/tutorial.html
+++ b/webgpu/tutorial.html
@@ -4,10 +4,24 @@
   <head>
     <meta charset="utf-8">
     <title>WebGPU Life</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link href="../mainStyle.css" type="text/css" rel="stylesheet">
   </head>
   <style>
   </style>
   <body>
+    <header class="container-fluid">
+      <div class="row align-items-center" id="">
+          <h1 class="col-sm-5 text-center" id="title">daniel mark jones</h1>
+          <div class="col-sm-2"></div>
+          <nav class="col-sm-5 text-center">
+              <a class="navlink" class="align-middle" href="http://danielmarkjones.com">home</a>
+              <a class="navlink" class="align-middle" href="http://danielmarkjones.com/photos">photos</a>
+              <a class="navlink" class="align-middle" href="http://danielmarkjones.com/cardshark">cardshark</a>
+              <a class="navlink" class="align-middle" href="http://danielmarkjones.com/webgpu/tutorial.html">webgpu</a>
+          </nav>
+      </div>
+  </header>
     
     <canvas width="512" height="512"></canvas>
     <p>POS: <span id="pos">x, y</span></p>
