--- a/webgpu/tutorial.html
+++ b/webgpu/tutorial.html
@@ -24,16 +24,15 @@
   </header>
     
     <canvas width="512" height="512"></canvas>
-    <p>POS: <span id="pos">x, y</span></p>
-    <p>debug: <span id="debug">[]</span></p>
-    <button id="play_simulation_button">play</button>
-    <button id="reshuffle_button">reshuffle</button>
-    <label for="tick_rate">Adjust the value:</label>
+    <p>mouse pos: <span id="pos">x, y</span></p>
+    <button id="play_simulation_button">play/pause</button>
+    <label for="tick_rate">time between frames</label>
     <input type="range" id="tick_rate" min="1" max="500" value="20">
-    <p>Current Value: <span id="tick_rate_value">100</span></p>
-    <label for="dot_generate">Adjust the value:</label>
+    <p>current time between frames: <span id="tick_rate_value">100</span></p>
+    <label for="dot_generate">cell spawn rate:</label>
+    <button id="reshuffle_button">reset cells</button>
     <input type="range" id="dot_generate" min="0" max="1" value="0.3" step="0.01">
-    <p>Current Value: <span id="dot_generate_value">100</span></p>
+    <p>current cell spawn rate: <span id="dot_generate_value">100</span></p>
     <p>This is from a tutorial from <a href="https://codelabs.developers.google.com/your-first-webgpu-app#2">google codelabs</a><br></p>
     <script src="tutorial_webgpu.js" type="module"></script>
   </body>
