--- a/webgpu/tutorial.html
+++ b/webgpu/tutorial.html
@@ -8,6 +8,18 @@
     <link href="../mainStyle.css" type="text/css" rel="stylesheet">
   </head>
   <style>
+    .container{
+    margin-bottom: 15px;
+    margin-top: 15px;
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+    }
+
+    .content{
+        background-color:#ffffff;
+        color: #1F2125;
+    }
   </style>
   <body>
     <header class="container-fluid">
@@ -22,18 +34,21 @@
           </nav>
       </div>
   </header>
-    
-    <canvas width="512" height="512"></canvas>
-    <p>mouse pos: <span id="pos">x, y</span></p>
-    <button id="play_simulation_button">play/pause</button>
-    <label for="tick_rate">time between frames</label>
-    <input type="range" id="tick_rate" min="1" max="500" value="20">
-    <p>current time between frames: <span id="tick_rate_value">100</span></p>
-    <label for="dot_generate">cell spawn rate:</label>
-    <button id="reshuffle_button">reset cells</button>
-    <input type="range" id="dot_generate" min="0" max="1" value="0.3" step="0.01">
-    <p>current cell spawn rate: <span id="dot_generate_value">100</span></p>
-    <p>This is from a tutorial from <a href="https://codelabs.developers.google.com/your-first-webgpu-app#2">google codelabs</a><br></p>
-    <script src="tutorial_webgpu.js" type="module"></script>
+  <div class="container">
+    <div class="content">
+      <canvas width="512" height="512"></canvas>
+      <p>mouse pos: <span id="pos">x, y</span></p>
+      <button id="play_simulation_button">play/pause</button>
+      <label for="tick_rate">time between frames</label>
+      <input type="range" id="tick_rate" min="1" max="500" value="20">
+      <p>current time between frames: <span id="tick_rate_value">100</span></p>
+      <label for="dot_generate">cell spawn rate:</label>
+      <button id="reshuffle_button">reset cells</button>
+      <input type="range" id="dot_generate" min="0" max="1" value="0.3" step="0.01">
+      <p>current cell spawn rate: <span id="dot_generate_value">100</span></p>
+      <p>This is from a tutorial from <a href="https://codelabs.developers.google.com/your-first-webgpu-app#2">google codelabs</a><br></p>
+      <script src="tutorial_webgpu.js" type="module"></script>
+    </div>
+  </div>
   </body>
 </html>
