add bitfliplab blog

--- a/index.html
+++ b/index.html
@@ -32,14 +32,19 @@
             <li>Navigating the interesting world of shaders for the first time ever</li>
             <li>Play around with an interactive <a href="https://danielmarkjones.com/webgpu/tutorial.html">Conway's Game of Life</a> running entirely using the new webgpu framework!</li>
             </ul>
+            <h2 id="photo-gallery"><a href="https://danielmarkjones.com/photos">Photo Gallery</a></h2>
+            <ul>
+            <li>Enjoy some of my photography from around the world in a simple gallery view</li>
+            </ul>
+            <h2 id="bitflip-lab"><a href="https://danielmarkjones.com/bitflip">Bitflip Lab</a></h2>
+            <ul>
+            <li>Computer memory can and has been effected by cosmic rays and alpha particles, but do they effect you?</li>
+            <li>I've set up a personal RAM testbench in my basement. Come check and see if anything has happened.</li>
+            </ul>
             <h2 id="wip-cardshark-web-game">WIP: <a href="https://danielmarkjones.com/cardshark">cardshark web game</a></h2>
             <ul>
             <li>Poker / slapjack fusion card game where you wager the cards themselves</li>
             <li>Original card game being created and developed by my family</li>
-            </ul>
-            <h2 id="photo-gallery"><a href="https://danielmarkjones.com/photos">Photo Gallery</a></h2>
-            <ul>
-            <li>Enjoy some of my photography from around the world in a simple gallery view</li>
             </ul>
             <h2 id="doggone"><a href="https://dangertimmy.itch.io/doggone">Doggone</a></h2>
             <ul>
@@ -49,6 +54,7 @@
             </ul>
         </div>
     </div>
+    
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
