--- a/blogs/ddns/index.html
+++ b/blogs/ddns/index.html
@@ -1,32 +1,22 @@
 <!DOCTYPE html>
 
 <html>
-
 <head>
     <title>daniel mark jones</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
         integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../gitlab_md.css">
-    <link rel="stylesheet" href="../header.css">
-    <link href="../mainStyle.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="../../gitlab_md.css">
+    <link rel="stylesheet" href="../../header.css">
+    <link rel="stylesheet" href="../../mainStyle.css">
 </head>
 
 <body>
     <div id="header_loc"></div>
     <article class="markdown-body" id="markdown_loc">
-    </article>
     <script type="module">
-        import { import_html, import_htmls} from "/utils.js";
+        import { import_html } from "/utils.js"
         import_html("/header.html", "header_loc");
-        const paths = [
-            "index_md.html",
-            "/blogs/ddns/feature_md.html",
-            "/blogs/bitflip/feature_md.html",
-            "/blogs/webgpu/feature_md.html",
-        ]
-        import_htmls(paths, "markdown_loc");
+        import_html("index_md.html", "markdown_loc");
     </script>
 </body>
-
-</html>
