remove all dns references to own domain

--- a/blogs/ddns/feature_md.html
+++ b/blogs/ddns/feature_md.html
@@ -1,4 +1,4 @@
-<h2><a href="https://danielmarkjones.com/blogs/ddns">Dynamic DNS for Home Hosting</a></h2>
+<h2><a href="/blogs/ddns">Dynamic DNS for Home Hosting</a></h2>
 <ul>
 <li>Overcoming the constraints of standard home internet to avoid cloud fees</li>
 <li>The simple solution for self hosting this site while preserving privacy</li>
