--- a/header.html
+++ b/header.html
@@ -2,9 +2,9 @@
     <div class="row align-items-center" id="">
         <h1 class="col-sm-6 text-center" id="title">daniel mark jones</h1>
         <nav class="col-sm-6 text-center">
-            <a class="navlink" class="align-middle" href="https://danielmarkjones.com">home</a>
-            <a class="navlink" class="align-middle" href="https://danielmarkjones.com/photos">photos</a>
-            <a class="navlink" class="align-middle" href="https://danielmarkjones.com/blogs">blogs</a>
+            <a class="navlink" class="align-middle" href="/">home</a>
+            <a class="navlink" class="align-middle" href="/photos">photos</a>
+            <a class="navlink" class="align-middle" href="/blogs">blogs</a>
         </nav>
     </div>
 </header>
