--- a/blogs/feature_md.html
+++ b/blogs/feature_md.html
@@ -1,4 +1,4 @@
-<h2><a href="https://danielmarkjones.com/blogs">Blogs</a></h2>
+<h2><a href="/blogs">Blogs</a></h2>
 <ul>
 <li>List of the blogs on various topics I've been interested in lately</li>
 <li>Current list includes self-hosting, comic ray memory corruption, and client side compute shaders</li>
