added twinkle feature; made markdown converter recursive; added emojis to features

--- a/external-features/doggone_md.html
+++ b/external-features/doggone_md.html
@@ -1,4 +1,4 @@
-<h2><a href="https://dangertimmy.itch.io/doggone">Doggone</a></h2>
+<h2><a href="https://dangertimmy.itch.io/doggone">Doggone🐕</a></h2>
 <ul>
 <li>Environment driven visual novel about a mysterious world and a lost dog</li>
 <li>Winner of best sound design in the 2020 UT Game Jam</li>
