--- a/photos/feature_md.html
+++ b/photos/feature_md.html
@@ -1,4 +1,4 @@
-<h2><a href="/photos">Photo Gallery</a></h2>
+<h2><a href="/photos">Photo Gallery📸</a></h2>
 <ul>
 <li>Enjoy some of my photography from around the world in a simple gallery view</li>
 </ul>
