--- a/blogs/bitflip/feature_md.html
+++ b/blogs/bitflip/feature_md.html
@@ -1,4 +1,4 @@
-<h2><a href="/blogs/bitflip">Cosmic Ray Memory Corruption</a></h2>
+<h2><a href="/blogs/bitflip">Cosmic Ray Memory Corruption 💫</a></h2>
 <ul>
 <li>Computer memory can and has been effected by cosmic rays and alpha particles, but do they effect the average computer?</li>
 <li>Investigated RAM errors on a statically allocated chunk of memory over time</li>
