--- a/blogs/webgpu/feature_md.html
+++ b/blogs/webgpu/feature_md.html
@@ -1,4 +1,4 @@
-<h2><a href="/blogs/webgpu">Google Webgpu Experiments</a></h2>
+<h2><a href="/blogs/webgpu">Google Webgpu Experiments 🎮</a></h2>
 <ul>
 <li>Navigating the interesting world of shaders for the first time ever</li>
 <li>Play around with an interactive <a href="/blogs/webgpu">Conway's Game of Life</a> running entirely on your GPU</li>
