--- a/blogs/twinkle/feature_md.html
+++ b/blogs/twinkle/feature_md.html
@@ -1,4 +1,4 @@
-<h2><a href="/blogs/twinkle">The Perfect Christmas Lights, Over-engineered ✨</a></h2>
+<h2><a href="/blogs/twinkle">The Perfect Christmas Lights, Overengineered ✨</a></h2>
 <ul>
 <li>Modern LED christmas lights don't have the same cozy magic as the old ones</li>
 <li>Simulating the electromagnetic properties of the old ones to capture that cozy magic</li>
