--- a/blogs/twinkle/twinkle_md.html
+++ b/blogs/twinkle/twinkle_md.html
@@ -4,10 +4,11 @@
 <li><a href="https://space-charts.vercel.app/?temp=3130">Blackbody Ratiation Interactive Graph</a></li>
 <li><a href="https://www.desmos.com/calculator/xhyts4ee35">Spectral Radiance Desmos</a></li>
 <li><a href="https://www.desmos.com/calculator/gq4j2wtnev">Normalized Approximation for Photometry of 0 - 6000K</a></li>
+<li><a href="https://www.youtube.com/@TechnologyConnections">inspo</a></li>
 </ol>
 <p>Integral of Plank's law over the visible spectrum
 1000, 1677387.76016
-2000, 6.1420785235\times10^{11}
+2000, 6.1420785235\times10^{}
 2500, 8.9376399219\times10^{12}
 3000, 5.5607477185\times10^{13}
 3500, 2.1084523413\times10^{14}
